# tweet_analysis_api

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
analysis/trend-analysis/: analyser.py  aws_utils.py  cloudwatch_schedular.sh  date_processor.py  decimal_encoder.py  downloader.py  query.py  serverless.yml  targets.json  tweet_processor.py  uploader.py
dynamodb/functions/: create_table.py
utils/: exceptions.py  json_loader.py
