[tool.poetry]
name = "analysis"
version = "0.1.0"
description = "Analyis and query trends"
authors = ["yeachan153 <yeachan153@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.8.3"
black = "^20.8b1"
mypy = "^0.782"
boto3 = "^1.14.59"
botocore = "^1.17.60"
pre-commit = "^2.7.1"

[tool.poetry.dev-dependencies]
IPython = "^7.18.1"
pandas = "^1.1.2"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
